--- a/CardForm/src/main/res/values/strings.xml
+++ b/CardForm/src/main/res/values/strings.xml
@@ -4,13 +4,12 @@
     <string name="bt_form_hint_expiration">Expiration Date</string>
     <string name="bt_form_hint_cvv">@string/bt_cvv</string>
     <string name="bt_form_hint_postal_code">Postal Code</string>
-    <string name="bt_form_hint_country_code">Country Code</string>
-    <string name="bt_form_hint_mobile_number">Mobile Number</string>
+    <string name="bt_form_hint_first_name">First Name</string>
+    <string name="bt_form_hint_last_name">Last Name</string>
 
     <string name="bt_cvv">CVV</string>
     <string name="bt_cvc">CVC</string>
     <string name="bt_cid">CID</string>
-    <string name="bt_cvn">CVN</string>
 
     <string name="bt_month">Month</string>
     <string name="bt_year">Year</string>
@@ -21,7 +20,7 @@
     <string name="bt_cvv_invalid">%s is invalid</string>
     <string name="bt_expiration_required">Expiration date is required</string>
     <string name="bt_expiration_invalid">Expiration date is invalid</string>
-    <string name="bt_postal_code_required">Postal code is required</string>
-    <string name="bt_country_code_required">Country code is required</string>
-    <string name="bt_mobile_number_required">Mobile number is required</string>
+    <string name="bt_postal_code_required">First Name is required</string>
+    <string name="bt_first_name_required">First Name is required</string>
+    <string name="bt_last_name_required">Last Name is required</string>
 </resources>
