--- a/Sample/src/main/res/values/strings.xml
+++ b/Sample/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Card Form Sample</string>
     <string name="purchase">Purchase</string>
     <string name="valid">Form is valid</string>
-    <string name="invalid">Form is invalid</string>
+    <string name="invalid">Please check card information again</string>
     <string name="light_theme_form">Light Theme</string>
     <string name="dark_theme_form">Dark Theme</string>
     <string name="scan_with_card_io">Scan with card.io</string>
